[gd_scene load_steps=8 format=2]

[ext_resource path="res://Stats.tscn" type="PackedScene" id=1]
[ext_resource path="res://Enemies/StaticAutoEnemy.gd" type="Script" id=2]
[ext_resource path="res://Enemies/SeekArea.gd" type="Script" id=4]

[sub_resource type="SphereShape" id=6]

[sub_resource type="SpatialMaterial" id=7]
albedo_color = Color( 0, 0, 0, 1 )

[sub_resource type="SphereMesh" id=5]
material = SubResource( 7 )

[sub_resource type="CylinderShape" id=3]
radius = 10.0
height = 10.0

[node name="StaticAutoEnemy" type="KinematicBody"]
collision_layer = 4
collision_mask = 7
script = ExtResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 6 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( -1, -8.74228e-08, 3.82137e-15, 0, -4.37114e-08, -1, 8.74228e-08, -1, 4.37114e-08, 0, 0, 0 )
mesh = SubResource( 5 )
material/0 = null

[node name="Stats" parent="." instance=ExtResource( 1 )]

[node name="HurtArea" type="Area" parent="."]
collision_layer = 16
collision_mask = 0

[node name="CollisionShape" type="CollisionShape" parent="HurtArea"]
shape = SubResource( 6 )

[node name="SeekArea" type="Area" parent="."]
collision_layer = 0
collision_mask = 2
script = ExtResource( 4 )

[node name="CollisionShape" type="CollisionShape" parent="SeekArea"]
shape = SubResource( 3 )

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="ShootFrom" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2 )

[connection signal="area_entered" from="HurtArea" to="." method="_on_Area_area_entered"]
[connection signal="body_entered" from="SeekArea" to="SeekArea" method="_on_SeekArea_body_entered"]
[connection signal="body_exited" from="SeekArea" to="SeekArea" method="_on_SeekArea_body_exited"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
